; ModuleID = '/home/carl/AnghaBench/sway/swaybar/tray/extr_host.c_handle_sni_unregistered.c'
source_filename = "/home/carl/AnghaBench/sway/swaybar/tray/extr_host.c_handle_sni_unregistered.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.swaybar_tray = type { i32, %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32* }

@.str = private unnamed_addr constant [2 x i8] c"s\00", align 1
@SWAY_ERROR = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [43 x i8] c"Failed to parse unregister SNI message: %s\00", align 1
@cmp_sni_id = common dso_local global i32 0, align 4
@SWAY_INFO = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [40 x i8] c"Unregistering Status Notifier Item '%s'\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i32*)* @handle_sni_unregistered to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @handle_sni_unregistered(i32* %0, i8* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.swaybar_tray*, align 8
  %10 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32* %2, i32** %6, align 8
  %11 = load i32*, i32** %4, align 8
  %12 = call i32 @sd_bus_message_read(i32* %11, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i8** %7)
  store i32 %12, i32* %8, align 4
  %13 = load i32, i32* %8, align 4
  %14 = icmp slt i32 %13, 0
  br i1 %14, label %15, label %21

15:                                               ; preds = %3
  %16 = load i32, i32* @SWAY_ERROR, align 4
  %17 = load i32, i32* %8, align 4
  %18 = sub nsw i32 0, %17
  %19 = call i8* @strerror(i32 %18)
  %20 = call i32 @sway_log(i32 %16, i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str.1, i64 0, i64 0), i8* %19)
  br label %21

21:                                               ; preds = %15, %3
  %22 = load i8*, i8** %5, align 8
  %23 = bitcast i8* %22 to %struct.swaybar_tray*
  store %struct.swaybar_tray* %23, %struct.swaybar_tray** %9, align 8
  %24 = load %struct.swaybar_tray*, %struct.swaybar_tray** %9, align 8
  %25 = getelementptr inbounds %struct.swaybar_tray, %struct.swaybar_tray* %24, i32 0, i32 1
  %26 = load %struct.TYPE_3__*, %struct.TYPE_3__** %25, align 8
  %27 = load i32, i32* @cmp_sni_id, align 4
  %28 = load i8*, i8** %7, align 8
  %29 = call i32 @list_seq_find(%struct.TYPE_3__* %26, i32 %27, i8* %28)
  store i32 %29, i32* %10, align 4
  %30 = load i32, i32* %10, align 4
  %31 = icmp ne i32 %30, -1
  br i1 %31, label %32, label %55

32:                                               ; preds = %21
  %33 = load i32, i32* @SWAY_INFO, align 4
  %34 = load i8*, i8** %7, align 8
  %35 = call i32 @sway_log(i32 %33, i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.2, i64 0, i64 0), i8* %34)
  %36 = load %struct.swaybar_tray*, %struct.swaybar_tray** %9, align 8
  %37 = getelementptr inbounds %struct.swaybar_tray, %struct.swaybar_tray* %36, i32 0, i32 1
  %38 = load %struct.TYPE_3__*, %struct.TYPE_3__** %37, align 8
  %39 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %38, i32 0, i32 0
  %40 = load i32*, i32** %39, align 8
  %41 = load i32, i32* %10, align 4
  %42 = sext i32 %41 to i64
  %43 = getelementptr inbounds i32, i32* %40, i64 %42
  %44 = load i32, i32* %43, align 4
  %45 = call i32 @destroy_sni(i32 %44)
  %46 = load %struct.swaybar_tray*, %struct.swaybar_tray** %9, align 8
  %47 = getelementptr inbounds %struct.swaybar_tray, %struct.swaybar_tray* %46, i32 0, i32 1
  %48 = load %struct.TYPE_3__*, %struct.TYPE_3__** %47, align 8
  %49 = load i32, i32* %10, align 4
  %50 = call i32 @list_del(%struct.TYPE_3__* %48, i32 %49)
  %51 = load %struct.swaybar_tray*, %struct.swaybar_tray** %9, align 8
  %52 = getelementptr inbounds %struct.swaybar_tray, %struct.swaybar_tray* %51, i32 0, i32 0
  %53 = load i32, i32* %52, align 8
  %54 = call i32 @set_bar_dirty(i32 %53)
  br label %55

55:                                               ; preds = %32, %21
  %56 = load i32, i32* %8, align 4
  ret i32 %56
}

declare dso_local i32 @sd_bus_message_read(i32*, i8*, i8**) #1

declare dso_local i32 @sway_log(i32, i8*, i8*) #1

declare dso_local i8* @strerror(i32) #1

declare dso_local i32 @list_seq_find(%struct.TYPE_3__*, i32, i8*) #1

declare dso_local i32 @destroy_sni(i32) #1

declare dso_local i32 @list_del(%struct.TYPE_3__*, i32) #1

declare dso_local i32 @set_bar_dirty(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
